# visprompter

./: README.md  pyproject.toml
visprompter/: __init__.py  api.py  capture.py  cli.py  discover.py  store.py
visprompter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
visprompter/ui/static/: index.html
visprompter/ui/static/assets/: index-v7Ew3ZW5.js
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx
web/src/components/: LogitLensPanel.jsx  Split.jsx  Surface3D.jsx
web/src/lib/: api.js  colormap.js
